2014-01-03  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_generate_pseudodata):  Allow use of '+' pseudofile
	to sample the parametric variable T in 2D parametric mode.

2013-12-31  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/graphics.c (get_arrow) src/term.c (do_arc):  The aspect ratio
	of the internal coordinates	of the windows terminal is always one.
	Bug #1253

	* src/win/wtext.c (WndTextProc) src/fit.c (regress):  The ctrlc_flag
	got clobbered due to a missing break statement.

2013-12-31  Ethan A Merritt  <merritt@u.washington.edu>

	Increment patchlevel to 4.6.5

2013-12-29  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgraph.c (drawgraph) term/win.trm (WIN_filled_polygon):
	Rectangular filled polygons are drawn using boxfill. This routine
	contained a bug in the allocation of an internal bitmap which prevented
	those polygons from being drawn under certain circumstances. The 
	routine was also sensitive to the order of the corner points.
	Bug #1279

2013-12-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gp_types.h src/plot2d.c src/tables.c src/interpol.c src/interpol.h
	docs/gnuplot.doc:

	New smoothing option "mcsplines" - piecewise monotonic cubic splines
	calculated using the algorithm of FN Fritsch & RE Carlson (1980),
	SIAM Journal on Numerical Analysis 17: 238-246.

2013-12-21  Ethan A Merritt  <merritt@u.washington.edu>

	* src/Makefile.am: automake 1.14 wants an option subdir-objects
	
	* configure.in src/show.c:
	The option --enable-thin-splines no longer does anything; remove it.

	* src/parse.c (next_iteration): survive clobbered iteration variable
	Bug #1312

2013-12-15  Jyrki Yli-Nokari  <jyrkiylinokari@gmail.com>

	* src/bitmap.c configure.in:
	Jyrki Yli-Nokari, the original author of the code in bitmap.c,
	has agreed to relicense it as dual license (gnuplot + BSD).
	This removes a restriction to non-commercial use imposed by the
	license terms that appeared in earlier versions of file bitmap.c.
